_css/custom.css
/* Custom */
body {
  color: #4a4a4a;
}

a {
  color: black;
}

a:visited {
  color: gray;
}

a:hover {
  color: #777;
  text-decoration: underline;
}

img {
  height: auto;
  max-width: 100%;
}

h1 {
  margin-bottom: 1em;
  font-size: 150%;
}

h1.headline {
  font-size: 170%;
  margin-bottom: 0.5em;
}

h2 {
  font-size: 130%;
}

h3 {
  font-size: 120%;
}

code {
  color: inherit;
}

.page-content {
  min-height: 500px;
}

.page-content .container {
  margin-top: 5.5rem;
}

.navbar .navbar-brand {
  font-size: 1.4rem;
  padding: 0;
}

.navbar .nav-item:not(:last-of-type) {
  margin-right: 0.5rem;
}

.navbar .nav-item.active {
  border-bottom: 2px solid black;
}

.home {
  width: 80%;
  margin: auto;
}

.posts {
  padding-left: 20px;
  font-size: 1.2em;
}

.posts .post-date {
  display: inline-block;
  width: 7rem;
}

.posts li {
  list-style-type: none;
  margin-top: 0.5em;
}

.posts .more {
  margin-top: 20px;
}

.center {
  text-align: center;
}

.post {
  width: 90%;
  margin: auto;
  line-height: 1.618;
  font-size: 18px;
}

.post h2 {
  margin: 2rem 0 1rem 0;
}

.post .little-face img {
  margin-left: 5px;
}

.post article {
  margin: 2rem 0;
}

.post article a {
  text-decoration: none;
  border-bottom: 1px dotted;
}

.post .report-bugs {
  margin-top: 20px;
}

.post .related {
  border-top: 1px solid #d3d3d3;
  margin-top: 20px;
  padding-top: 20px;
}

.post .pagination {
  margin: 1rem 0;
  width: 100%;
}

footer.footer {
  color: black;
  margin-top: 2rem;
}

footer hr {
  width: 80%;
}

@media (max-width: 768px) {
  footer {
    text-align: center;
  }
}

.dropdown-menu>li>a:hover,
.dropdown-menu>li>a:focus {
  background-color: gray;
}

.consulting-accordian {
  margin: 1rem;
}

.consulting-accordian details {
  margin: 0.1rem 0;
}

.consulting-accordian details svg.octicon {
  margin-top: -4px;
  margin-right: 0.5rem;
}

.consulting-accordian details ul {
  margin-top: 0.5rem;
}

.consulting-accordian details .row:not(:first-of-type) {
  margin-top: 1rem;
}

.consulting-accordian details summary h3 {
  display: inline-block;
}

/* Syntax */

/* to make lines scroll instead of wrap */
/* from http://stackoverflow.com/a/23393920 */

.highlight pre code * {
  white-space: nowrap;
}

.highlight pre {
  overflow-x: auto;
}

.highlight pre code {
  white-space: pre;
}

/*
 * GitHub style for Pygments syntax highlighter, for use with Jekyll
 * Courtesy of GitHub.com
 */

.highlight pre,
pre,
.highlight .hll {
  background-color: #f8f8f8;
  border: 1px solid #ccc;
  padding: 6px 10px;
  border-radius: 3px;
}

.highlight .c {
  color: #999988;
  font-style: italic;
}

.highlight .err {
  color: #a61717;
  background-color: #e3d2d2;
}

.highlight .k {
  font-weight: bold;
}

.highlight .o {
  font-weight: bold;
}

.highlight .cm {
  color: #999988;
  font-style: italic;
}

.highlight .cp {
  color: #999999;
  font-weight: bold;
}

.highlight .c1 {
  color: #999988;
  font-style: italic;
}

.highlight .cs {
  color: #999999;
  font-weight: bold;
  font-style: italic;
}

.highlight .gd {
  color: #000000;
  background-color: #ffdddd;
}

.highlight .gd .x {
  color: #000000;
  background-color: #ffaaaa;
}

.highlight .ge {
  font-style: italic;
}

.highlight .gr {
  color: #aa0000;
}

.highlight .gh {
  color: #999999;
}

.highlight .gi {
  color: #000000;
  background-color: #ddffdd;
}

.highlight .gi .x {
  color: #000000;
  background-color: #aaffaa;
}

.highlight .go {
  color: #888888;
}

.highlight .gp {
  color: #555555;
}

.highlight .gs {
  font-weight: bold;
}

.highlight .gu {
  color: #800080;
  font-weight: bold;
}

.highlight .gt {
  color: #aa0000;
}

.highlight .kc {
  font-weight: bold;
}

.highlight .kd {
  font-weight: bold;
}

.highlight .kn {
  font-weight: bold;
}

.highlight .kp {
  font-weight: bold;
}

.highlight .kr {
  font-weight: bold;
}

.highlight .kt {
  color: #445588;
  font-weight: bold;
}

.highlight .m {
  color: #009999;
}

.highlight .s {
  color: #dd1144;
}

.highlight .n {
  color: #333333;
}

.highlight .na {
  color: teal;
}

.highlight .nb {
  color: #0086b3;
}

.highlight .nc {
  color: #445588;
  font-weight: bold;
}

.highlight .no {
  color: teal;
}

.highlight .ni {
  color: purple;
}

.highlight .ne {
  color: #990000;
  font-weight: bold;
}

.highlight .nf {
  color: #990000;
  font-weight: bold;
}

.highlight .nn {
  color: #555555;
}

.highlight .nt {
  color: navy;
}

.highlight .nv {
  color: teal;
}

.highlight .ow {
  font-weight: bold;
}

.highlight .w {
  color: #bbbbbb;
}

.highlight .mf {
  color: #009999;
}

.highlight .mh {
  color: #009999;
}

.highlight .mi {
  color: #009999;
}

.highlight .mo {
  color: #009999;
}

.highlight .sb {
  color: #dd1144;
}

.highlight .sc {
  color: #dd1144;
}

.highlight .sd {
  color: #dd1144;
}

.highlight .s2 {
  color: #dd1144;
}

.highlight .se {
  color: #dd1144;
}

.highlight .sh {
  color: #dd1144;
}

.highlight .si {
  color: #dd1144;
}

.highlight .sx {
  color: #dd1144;
}

.highlight .sr {
  color: #009926;
}

.highlight .s1 {
  color: #dd1144;
}

.highlight .ss {
  color: #990073;
}

.highlight .bp {
  color: #999999;
}

.highlight .vc {
  color: teal;
}

.highlight .vg {
  color: teal;
}

.highlight .vi {
  color: teal;
}

.highlight .il {
  color: #009999;
}

.highlight .gc {
  color: #999;
  background-color: #eaf2f5;
}

